# TNM094

particlesystem/: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
particlesystem/include/particlesystem/: effect.hpp  effect1.hpp  emitter.hpp  emitter1.hpp  newEmitter.cpp  newEmitter.hpp  particle.hpp  particle1.hpp  particlesystem.hpp  particlesystem1.hpp
particlesystem/include/rendering/: window.h
particlesystem/src/application/: main.cpp
particlesystem/src/particlesystem/: effect.cpp  effect1.cpp  emitter.cpp  emitter1.cpp  particle.cpp  particle1.cpp  particlesystem.cpp  particlesystem1.cpp
particlesystem/src/rendering/: window.cpp
particlesystem/unittest/: othertests.cpp  vec2.cpp
